--- a/ui/comprehensive_bpmn_modeler.html
+++ b/ui/comprehensive_bpmn_modeler.html
@@ -1312,7 +1312,7 @@
         // Add keyboard event listener
         document.addEventListener('keydown', handleKeyboardEvents);
 
-        // Add clear model function
+        // Enhanced clear model function
         function clearModel() {
             if (confirm('Are you sure you want to clear the entire model? This cannot be undone.')) {
                 if (modeler) {
@@ -1326,6 +1326,9 @@
                 modeler = null;
                 selectedElement = null;
                 currentView = 'diagram';
+
+                // Clear properties panel
+                updatePropertiesPanel();
 
                 // Reinitialize with empty model
                 initModeler();
